<resources>
    <string name="addimages">Add Images</string>
    <string name="welcome">Welcome to \nCaritas- Serving Smiles</string>
    <string name="app_name">Caritas-Serving Smiles</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="about">About Us</string>
    <string name="history">History</string>
    <string name="aboutus">Help </string>
    <string name="login">Login</string>
    <string name="donate">Donate</string>
    <string name="message">Message</string>
    <string name="create_new">Not Registered! Click here to Register</string>
    <string name="not_register">Already Registered?</string>
    <string name="name">Name</string>
    <string name="ngoid">NGO Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>

    <string name="donor_name">Donor Name</string>
    <string name="food_name">Dish Name</string>
    <string name="description">Quantity of Food</string>
    <string name="description2">Dish Name</string>

    <string name="expiry">Expiry (In Days)</string>
    <string name="submit">Submit</string>

    <string name="foodmap">Map</string>
    <string name="mypin">Donor Map</string>

    <string name="receiver_name">Receiver Name</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete">Delete</string>
    <string name="notify">Notify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

