<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97D9A7"
    tools:context=".LoginSignup.landingpage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/opensans"
            android:textSize="26sp"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogin"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#E1FFE3"
            android:layout_margin="10dp"
            tools:ignore="KeyboardInaccessibleWidget,MissingClass">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/login_new"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:fontFamily="@font/opensans"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="135dp"
                android:layout_gravity="center_horizontal"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRegister"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#E1FFE3"
            android:layout_margin="10dp"
            tools:ignore="KeyboardInaccessibleWidget">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/register_new"
                android:layout_marginTop="18dp"
                tools:ignore="ContentDescription"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/opensans"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="135dp"
                android:layout_gravity="center_horizontal" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAboutus"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="#E1FFE3"
            android:layout_margin="10dp"
            tools:ignore="KeyboardInaccessibleWidget">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_group_people_svgrepo_com"
                android:layout_marginTop="18dp"
                tools:ignore="ContentDescription"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:fontFamily="@font/opensans"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="135dp"
                android:layout_gravity="center_horizontal" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView >