<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97D9A7"
    tools:context=".DonateActivities.DonateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/opensans"
            android:text="@string/donate"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <androidx.cardview.widget.CardView
                xmlns:Card_View="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:padding="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                Card_View:cardCornerRadius="5dp"
                Card_View:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameErrbor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/black">

                        <EditText
                            android:id="@+id/donorname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/donor_name"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@drawable/et_style"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/itemError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/black">

                        <EditText
                            android:id="@+id/fooditem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/food_name"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:inputType="text"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@drawable/et_style"
                            android:maxLines="2"
                            android:singleLine="true"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        app:boxStrokeColor="@color/black">

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/phone_number"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@drawable/et_style"
                            android:maxLength="12"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensans"
                        app:boxStrokeColor="@color/black">

                        <EditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/description"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans"
                            android:inputType="textMultiLine"
                            android:maxLines="10"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@drawable/et_style"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/black"
                        app:hintTextColor="@color/black"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensans"
                        app:boxStrokeColor="@color/black">

                        <EditText
                            android:id="@+id/expiry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/expiry"
                            android:textSize="20sp"
                            android:fontFamily="@font/opensans"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@drawable/et_style"
                            android:importantForAutofill="no"
                            tools:ignore="UnusedAttribute" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addimages"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensans"
                        android:textColor="@color/black"
                        android:layout_marginVertical="20dp"
                        android:gravity="center"/>

<!--                        <ImageView-->
<!--                            android:id="@+id/imgLeft"-->
<!--                            android:layout_width="40dp"-->
<!--                            android:layout_height="40dp"-->
<!--                            android:src="@drawable/img_left"-->
<!--                            android:background="@color/white"-->
<!--                            android:layout_marginHorizontal="20dp"/>-->

                        <!--                        <ImageView-->
                        <!--                            android:id="@+id/img2"-->
                        <!--                            android:layout_width="150dp"-->
                        <!--                            android:layout_height="150dp"-->
                        <!--                            android:src="@drawable/plus"-->
                        <!--                            android:padding="45dp"-->
                        <!--                            android:background="@color/gray" />-->

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:background="@color/gray"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/resultConfidence"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Result?"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:textSize="18sp"
                            android:fontFamily="@font/opensans"
                            android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/confidence"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Confidences:"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/opensans"
                        android:textColor="@color/black"/>

<!--                        <ImageView-->
<!--                            android:id="@+id/imgRight"-->
<!--                            android:layout_width="40dp"-->
<!--                            android:layout_height="40dp"-->
<!--                            android:src="@drawable/img_right"-->
<!--                            android:background="@color/white"-->
<!--                            android:layout_marginHorizontal="20dp"/>-->


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginTop="20dp">

                        <Button
                            android:id="@+id/selectImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Select"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/gray"
                            android:layout_marginRight="20dp"/>

                        <Button
                            android:id="@+id/clearImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Clear"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/gray"
                            android:layout_marginLeft="20dp"/>

                    </LinearLayout>

                    <fragment
                        android:id="@+id/google_map"
                        xmlns:map="http://schemas.android.com/apk/res-auto"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="20dp"
                        map:uiZoomControls="true"
                        tools:ignore="FragmentTagUsage" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/black"
                        android:text="@string/submit"
                        android:textColor="@color/button_text_color"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

